Removing console.log

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Alex Robson <alex@sharplearningcurve.com> (http://sharplearningcurve.com)",
   "name": "anvil.scaffolding",
   "description": "A set of scaffolds for extending anvil",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "repository": {
     "type": "git",
     "url": "git://github.com/anviljs/anvil.scaffolding.git"
@@ -12,7 +12,7 @@
   },
   "main": "./lib/scaffolding.js",
   "devDependencies": { 
-    "anvil.js": ">=0.9.0",
+    "anvil.js": "~0.9",
     "should": "~1.1"
   },
   "optionalDependencies": {},
